assets/css/main.css
/* ... */
/* Basic */

	body {
		background-image: url("images/overlay.png"), url("images/M82_Chandra_HST_Spitzer-2048.jpg");
		background-repeat: repeat, no-repeat;
		background-size: auto, 100% 100%;
		font-family: 'Source Sans Pro', sans-serif;
		font-weight: 300;
		color: #777777;
	}

		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
			-moz-transition: none !important;
			-webkit-transition: none !important;
			-ms-transition: none !important;
			transition: none !important;
			-moz-animation: none !important;
			-webkit-animation: none !important;
			-ms-animation: none !important;
			animation: none !important;
		}

	input, textarea, select {
		font-family: 'Source Sans Pro', sans-serif;
		font-weight: 300;
		color: #777777;
	}

	strong, b, h1, h2, h3, h4, h5, h6 {
		font-weight: 400;
		color: #363636;
	}

	blockquote {
		border-left: solid 0.5em #ddd;
		padding: 1em 0 1em 2em;
		font-style: italic;
	}

	em, i {
		font-style: italic;
	}

	hr {
		border: 0;
		border-top: solid 1px #ddd;
		padding: 1.5em 0 0 0;
		margin: 1.75em 0 0 0;
	}

	sub {
		position: relative;
		top: 0.5em;
		font-size: 0.8em;
	}

	sup {
		position: relative;
		top: -0.5em;
		font-size: 0.8em;
	}

	br.clear {
		clear: both;
	}

	p, ul, ol, dl, table, blockquote, form {
		margin-bottom: 2em;
	}

/* Table */

	table {
		width: 100%;
	}

		table.default tbody tr {
			border-bottom: solid 1px #f4f4f4;
		}

		table.default td {
			padding: 0.5em 1em 0.5em 1em;
		}

		table.default th {
			text-align: left;
			font-weight: 400;
			padding: 0.5em 1em 0.5em 1em;
		}

		table.default thead {
			border-bottom: solid 2px #f4f4f4;
		}

/* Form */

	form label {
		display: block;
		font-weight: 400;
		color: #363636;
		margin: 0 0 1em 0;
	}

	form input[type="text"],
	form input[type="email"],
	form input[type="password"],
	form select,
	form textarea {
		-webkit-appearance: none;
		border: 0;
		background: #f4f4f4;
		padding: 0.75em;
		width: 100%;
		-moz-transition: background-color .25s ease-in-out;
		-webkit-transition: background-color .25s ease-in-out;
		-ms-transition: background-color .25s ease-in-out;
		transition: background-color .25s ease-in-out;
	}

		form input[type="text"]:focus,
		form input[type="email"]:focus,
		form input[type="password"]:focus,
		form select:focus,
		form textarea:focus {
			background: #f8f8f8;
		}

	form input[type="text"],
	form input[type="email"],
	form input[type="password"],
	form select {
		line-height: 1.35em;
	}

	form ::-webkit-input-placeholder {
		color: #999;
	}

	form :-moz-placeholder {
		color: #999;
	}

	form ::-moz-placeholder {
		color: #999;
	}

	form :-ms-input-placeholder {
		color: #999;
	}

/* Section/Article */

	section, article {
		margin-bottom: 3em;
	}

		section > :last-child, section:last-child, article > :last-child, article:last-child {
			margin-bottom: 0;
		}

	header > p {
		color: #aaa;
	}

/* Image */

	.image {
		display: inline-block;
	}

		.image img {
			display: block;
			width: 100%;
		}

		.image.fit {
			display: block;
			width: 100%;
		}

		.image.featured {
			display: block;
			width: 100%;
			margin: 0 0 2em 0;
		}

		.image.left {
			float: left;
			margin: 0 2em 2em 0;
		}

		.image.centered {
			display: block;
			margin: 0 0 2em 0;
		}

			.image.centered img {
				margin: 0 auto;
				width: auto;
			}

/* Button */

	input[type="button"],
	input[type="submit"],
	input[type="reset"],
	button,
	.button {
		-webkit-appearance: none;
		display: inline-block;
		background-color: #222222;
		color: #ffffff;
		border: 0;
		cursor: pointer;
		outline: 0;
		-moz-transition: background-color .25s ease-in-out;
		-webkit-transition: background-color .25s ease-in-out;
		-ms-transition: background-color .25s ease-in-out;
		transition: background-color .25s ease-in-out;
	}

		input[type="button"]:hover,
		input[type="submit"]:hover,
		input[type="reset"]:hover,
		button:hover,
		.button:hover {
			background-color: #333333;
		}

		input[type="button"]:active,
		input[type="submit"]:active,
		input[type="reset"]:active,
		button:active,
		.button:active {
			background-color: #444444;
		}

		input[type="button"].alt,
		input[type="submit"].alt,
		input[type="reset"].alt,
		button.alt,
		.button.alt {
			background-color: #777777;
		}

			input[type="button"].alt:hover,
			input[type="submit"].alt:hover,
			input[type="reset"].alt:hover,
			button.alt:hover,
			.button.alt:hover {
				background-color: #888888;
			}

			input[type="button"].alt:active,
			input[type="submit"].alt:active,
			input[type="reset"].alt:active,
			button.alt:active,
			.button.alt:active {
				background-color: #999999;
			}

/* List */

	ul.default {
		list-style: disc;
		padding-left: 1em;
	}

		ul.default li {
			padding-left: 0.5em;
		}

	ul.actions li {
		display: inline-block;
		margin-left: 0.5em;
	}

		ul.actions li:first-child {
			margin-left: 0;
		}

	ol.default {
		list-style: decimal;
		padding-left: 1.25em;
	}

		ol.default li {
			padding-left: 0.25em;
		}

/* Icons */

	.icon {
		position: relative;
		text-decoration: none;
	}

		.icon:before {
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			font-family: FontAwesome;
			font-style: normal;
			font-weight: normal;
			text-transform: none !important;
		}

		.icon > .label {
			display: none;
		}

/* Nav */

	#nav a {
		position: relative;
		display: inline-block;
		color: #ffffff;
		width: 1em;
		height: 1em;
		line-height: 0.9em;
	}

		#nav a.icon:before {
			padding-right: 0;
		}

/* Panels */

	#main {
		position: relative;
		overflow: hidden;
	}

	.panel {
		position: relative;
	}

/* Projects */

	.project {

	}

		.project section {
			margin-bottom: 1.5em;
		}
	
		.project footer {
			margin-bottom: 0;
		}

		.project section img {
			max-width: 100%;
		}
		
		.project footer a {
			font-size: 1.5em;
			margin-right: 0.5em;
			color: black;
		}

		.project footer a.bullet:hover {
			color: grey
		}

		.project footer a.bullet {
			color: grey
		}
/* ... */

